[gd_scene load_steps=2 format=3 uid="uid://cq8m4x7savph"]

[ext_resource type="Script" path="res://scripts/designer/ShipStatsPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_performance_panel"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.886275, 0.886275, 1)

[node name="ShipStatsPanel" type="Panel"]
custom_minimum_size = Vector2(280, 300)
offset_right = 280.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_performance_panel")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 20
text = "PERFORMANCE"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OffenseRow" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="OffenseHeader" type="HBoxContainer" parent="VBoxContainer/OffenseRow"]
layout_mode = 2

[node name="OffenseIcon" type="Label" parent="VBoxContainer/OffenseRow/OffenseHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "⚔"

[node name="OffenseLabel" type="Label" parent="VBoxContainer/OffenseRow/OffenseHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = " OFFENSE: 0"

[node name="OffenseRating" type="Label" parent="VBoxContainer/OffenseRow/OffenseHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "(0)"

[node name="OffenseBar" type="ProgressBar" parent="VBoxContainer/OffenseRow"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="OffenseDetail" type="Label" parent="VBoxContainer/OffenseRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 11
text = "  0 weapons, 0 damage"

[node name="Separator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DefenseRow" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DefenseHeader" type="HBoxContainer" parent="VBoxContainer/DefenseRow"]
layout_mode = 2

[node name="DefenseIcon" type="Label" parent="VBoxContainer/DefenseRow/DefenseHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "⛨"

[node name="DefenseLabel" type="Label" parent="VBoxContainer/DefenseRow/DefenseHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = " DEFENSE: 0"

[node name="DefenseRating" type="Label" parent="VBoxContainer/DefenseRow/DefenseHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "(0)"

[node name="DefenseBar" type="ProgressBar" parent="VBoxContainer/DefenseRow"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="DefenseDetail" type="Label" parent="VBoxContainer/DefenseRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 11
text = "  0 HP, 0 shields"

[node name="Separator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ThrustRow" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ThrustHeader" type="HBoxContainer" parent="VBoxContainer/ThrustRow"]
layout_mode = 2

[node name="ThrustIcon" type="Label" parent="VBoxContainer/ThrustRow/ThrustHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "⚡"

[node name="ThrustLabel" type="Label" parent="VBoxContainer/ThrustRow/ThrustHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = " THRUST: 0"

[node name="ThrustRating" type="Label" parent="VBoxContainer/ThrustRow/ThrustHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "(0)"

[node name="ThrustBar" type="ProgressBar" parent="VBoxContainer/ThrustRow"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="ThrustDetail" type="Label" parent="VBoxContainer/ThrustRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 11
text = "  0 engines, 0 initiative"
